<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Layer Messenger</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <string name="password_hint">Password</string>
    <string name="username_hint">User Name</string>
    <string name="button_text">Sign in</string>
    <string name="logout_menu_text">Log out</string>
    <string name="send_text">Send</string>
    <string name="add_dialog_title">Add Dialog</string>
    <string name="logout_title">Log out</string>
    <string name="title_activity_dialog_chooser">DialogChooserActivity</string>
    <string name="title_activity_messenger">MessengerActivity</string>
    <string name="title_activity_users">Add User</string>
    <string name="participant_key">Participant</string>
    <string name="add_user">Add User</string>
    <string name="userName_label">username</string>
    <string name="options_label">Options</string>
    <string name="title_label">Title</string>
    <string name="send_button_text">Send</string>
    <string name="search_hint">Search</string>
    <string name="registration_label">Registration</string>
    <string name="title_activity_register">Register new user</string>
    <string name="firstname_parse_key">firstName</string>
    <string name="lastname_parse_key">lastName</string>

    <string name="name_hint">Nickname</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="btn_register_text">Register</string>
    <string name="email_hint">Email</string>
    <string name="conversation_id_key">layer-conversation-id</string>
    <string name="firstname_hint">First Name</string>
    <string name="lastname_hint">Last Name</string>
    <string name="more_button_text">More...</string>
    <string name="title_activity_maps">Map</string>
    <string name="ok_title">OK</string>
    <string name="locations_label">Attachment: map marker</string>
    <string name="pictures">Pictures</string>
    <string name="photo">Take Photo</string>
    <string name="marker">Marker on the map</string>
    <string name="lase_image">Last sent image</string>

</resources>
