<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/background_material_light"
    tools:context=".LoginActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:weightSum="1"
        android:padding="1dp"
        android:clickable="true"
        android:id="@+id/top_logo"
        android:background="@color/white">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:id="@+id/imageView"
            android:src="@drawable/layer_logo_app"
            android:visibility="visible"
            android:layout_weight="0.17"
            android:layout_margin="5dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:padding="10dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/userName"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="@drawable/abc_edit_text_material"
                android:hint="@string/username_hint"
                android:textColorHint="#bbbbbb" />

            <EditText
                android:id="@+id/password"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:hint="@string/password_hint"
                android:background="@drawable/abc_edit_text_material"
                android:textColorHint="#bbbbbb"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnSingIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="4dp"
                android:text="@string/button_text" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>