<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_material_light">

    <LinearLayout
        android:id="@+id/pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pictures"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
            android:paddingRight="@dimen/abc_dropdownitem_text_padding_right"
            android:textSize="@dimen/abc_text_size_large_material"
            android:text="@string/pictures" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_material_dark"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp" />

    <LinearLayout
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/attach_photo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
            android:paddingRight="@dimen/abc_dropdownitem_text_padding_right"
            android:textSize="@dimen/abc_text_size_large_material"
            android:text="@string/photo" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_material_dark"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp" />

    <LinearLayout
        android:id="@+id/last_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/last_image"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
            android:paddingRight="@dimen/abc_dropdownitem_text_padding_right"
            android:textSize="@dimen/abc_text_size_large_material"
            android:text="@string/last_image" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/background_material_dark"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp" />

    <LinearLayout
        android:id="@+id/map_marker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/map_marker"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="@dimen/abc_dropdownitem_text_padding_left"
            android:paddingRight="@dimen/abc_dropdownitem_text_padding_right"
            android:textSize="@dimen/abc_text_size_large_material"
            android:text="@string/marker" />
    </LinearLayout>
</LinearLayout>